# vi_ppo

./: .gitignore  LICENSE  luner lander demo.ipynb  pyproject.toml
notebooks/: average_tensorboard.ipynb  luner lander demo.ipynb  luner lander.ipynb  thread the needle.ipynb  thread the needle_ppo.ipynb  thread the needle_vae.ipynb  thread the needle_vi.ipynb  thread the needle_vi_trans.ipynb  thread the needle_vqvae.ipynb
scripts/: ppo_thread_the_needle.py
src/: actor_critic.py  buffer.py  rl_module.py  trainer.py
src/nets/: cnn.py  mlp.py  utils.py
src/vi_ppo/: actor_critic.py  actor_critic_fsq_vae.py  buffer.py  dvae.py  fsq_vae.py  modules.py  vae.py  vq_vae.py
src/vi_ppo/nets/: cnn.py  gumbel_softmax.py  mlp.py  utils.py  vq_vae.py
src/vi_ppo/nets/quantizers/: fsq.py
src/vi_ppo/utils/: fsq_vae.py  plotting.py  vae.py
tests/: test_haser.py
