[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "state_inference"
version = "0.1.0"
description = "State inference project"
requires-python = ">=3.10.13"
dependencies = [
    "torch",
    "torchvision",
    "scikit-learn",
    "tqdm",
    "seaborn",
    "notebook",
    "stable-baselines3",
    "ipywidgets",
    "rich",
    "tensorboard>=1.15",
    "memory_profiler",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
