[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vi_ppo"
version = "0.1.0"
description = "State inference project"
requires-python = ">=3.10.13"
dependencies = [
    "swig",
    "gymnasium[box2d]",
    "torch",
    "torchvision",
    "tqdm",
    "seaborn",
    "notebook",
    "stable-baselines3",
    "ipywidgets",
    "rich",
    "tensorboard>=1.15",
    "memory_profiler",
    "lightning",
    "thread-the-needle @ git+https://github.com/nicktfranklin/thread_the_needle.git",
    "einops",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vi_ppo"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3